--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.css'/>
     <script src='/dist/bundle.js' defer ></script>
   </head>
   <body>
